feat: add header menu

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>English for kids</title>
-    <link rel="stylesheet" href="./css/style.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>English for kids</title>
 </head>
 <body>
+	<header class="head">
+		<div class="burger-menu"></div>
+		<div class="switcher">
+			<p>Learn</p>
+			<input type="checkbox" id="switch-input" class="switch-input">
+			<label for="switch-input" class="switch"></label>
+			<p>Train</p>
+		</div>
+	</header>
 </body>
 </html>
