feat: add hamburger menu button

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
 	<header class="head">
-		<div class="burger-menu"></div>
+		<div class="hamburger-menu">
+			<span class="hamburger-menu__line"></span>
+		</div>
 		<div class="switcher">
 			<p>Learn</p>
 			<input type="checkbox" id="switch-input" class="switch-input">
