feat: add generation main page

--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
 	<header class="head">
-		<div class="hamburger-menu">
-			<span class="hamburger-menu__line"></span>
+		<div class="hamburger">
+			<div class="hamburger-menu">
+				<span class="hamburger-menu__line"></span>
+			</div>
 		</div>
 		<div class="switcher">
 			<p>Learn</p>
@@ -18,5 +20,13 @@
 			<p>Train</p>
 		</div>
 	</header>
+	<main class="main">
+
+	</main>
+	<div class="sidebar-wrapper">
+		<div class="sidebar">
+		</div>
+	</div>
 </body>
+
 </html>
