--- a/english-for-kids/src/index.html
+++ b/english-for-kids/src/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>English for kids</title>
 	<link href="https://fonts.googleapis.com/css2?family=Baloo+Paaji+2:wght@400;500&display=swap" rel="stylesheet">
+	<link rel="icon" href="./favicon.ico" type="image/x-icon">
 </head>
 <body>
 	<header class="head">
