feat: added control panel for stats button

--- a/english-for-kids/src/index.html
+++ b/english-for-kids/src/index.html
@@ -21,6 +21,7 @@
 			<p>Train</p>
 		</div>
 	</header>
+	<div class="control-panel"></div>
 	<main class="main">
 	</main>
 	<div class="sidebar-wrapper">
