feat: stats button removed to html file

--- a/english-for-kids/src/index.html
+++ b/english-for-kids/src/index.html
@@ -21,7 +21,12 @@
 			<p>Train</p>
 		</div>
 	</header>
-	<div class="control-panel"></div>
+	<div class="control-panel stats-button">
+		<div class="control-panel__item stats-button">
+			<img class="control-panel__image stats-button" src="/assets/img/stats.png">
+			<p class="stats-button">Stats</p>
+		</div>
+	</div>
 	<main class="main">
 	</main>
 	<div class="sidebar-wrapper">
