fix: fixed bug on stats button

--- a/english-for-kids/src/index.html
+++ b/english-for-kids/src/index.html
@@ -23,7 +23,7 @@
 	</header>
 	<div class="control-panel stats-button">
 		<div class="control-panel__item stats-button">
-			<img class="control-panel__image stats-button" src="/assets/img/stats.png">
+			<img class="control-panel__image stats-button" src="./assets/img/stats.png">
 			<p class="stats-button">Stats</p>
 		</div>
 	</div>
