feat: added search form

--- a/movie-search/src/index.html
+++ b/movie-search/src/index.html
@@ -12,7 +12,11 @@
     <h1>Movie Searcher</h1>
   </header>
   <main class="main">
-    <div class="search"></div>
+    <form class="search">
+      <input type="text" class="search__input" placeholder="search movie">
+      <input type="button" class="search__keyboard search__button">
+      <input type="submit" class="search__submit search__button" value="">
+    </form>
     <div class="cards">
       <div class="swiper-button-prev"></div>
       <div class="swiper-wrapper film">
