feat: added keyboard

--- a/movie-search/src/index.html
+++ b/movie-search/src/index.html
@@ -60,6 +60,9 @@
   <footer class="footer">
 
   </footer>
+  <div class="keyboard__wrapper">
+    <div class="keyboard__close"></div>
+  </div>
   <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
 </body>
 
