--- a/movie-search/src/index.html
+++ b/movie-search/src/index.html
@@ -24,6 +24,7 @@
       </div>
       <div class="swiper-button-next"></div>
       <div class="swiper-pagination"></div>
+      <div class="swiper-scrollbar"></div>
     </div>
   </main>
   <footer class="footer">
