feat: added spinner

--- a/movie-search/src/index.html
+++ b/movie-search/src/index.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
   <title>Movie searcher</title>
 </head>
-<body>
   <header class="header">
     <h1>Movie Searcher</h1>
   </header>
@@ -33,6 +32,10 @@
   <div class="keyboard__wrapper">
     <div class="keyboard__close"></div>
   </div>
+  <div class="loadingio-spinner-bean-eater-7aivasjcpw4 spinner">
+    <div class="ldio-plfaafvf38">
+    <div><div></div><div></div><div></div></div><div><div></div><div></div><div></div></div>
+  </div></div>
 </body>
 
 </html>
