feat: changed foote

--- a/movie-search/src/index.html
+++ b/movie-search/src/index.html
@@ -27,7 +27,10 @@
     </div>
   </main>
   <footer class="footer">
-
+    <div class="footer__wrapper">
+      <div class="footer__heading">RS School 2020Q1</div>
+      <a class="footer__github" href="https://github.com/Smarrti">Smarrti</a>
+    </div>
   </footer>
   <div class="keyboard__wrapper">
     <div class="keyboard__close"></div>
