--- a/movie-search/src/index.html
+++ b/movie-search/src/index.html
@@ -13,6 +13,7 @@
   <main class="main">
     <form class="search">
       <input type="text" class="search__input" placeholder="search movie" autocomplete="off">
+      <input type="button" class="search__clear search__button">
       <input type="button" class="search__keyboard search__button">
       <input type="submit" class="search__submit search__button" value="">
     </form>
