feat: add buttons for toggle on night theme

--- a/movie-search/src/index.html
+++ b/movie-search/src/index.html
@@ -11,6 +11,9 @@
     <h1>Movie Searcher</h1>
   </header>
   <main class="main">
+    <div class="night-theme">
+      <button class="switch__theme switch_moon"></button>
+    </div>
     <form class="search">
       <input type="text" class="search__input" placeholder="search movie" autocomplete="off">
       <input type="button" class="search__clear search__button">
@@ -20,7 +23,6 @@
     <div class="cards">
       <div class="swiper-button-prev"></div>
       <div class="swiper-wrapper film">
-        
       </div>
       <div class="swiper-button-next"></div>
       <div class="swiper-pagination"></div>
