--- a/fancy-weather/src/index.html
+++ b/fancy-weather/src/index.html
@@ -16,9 +16,9 @@
           <option value="be" selected>BE</option>
         </select>
       </form>
-      <form action="#" method="POST" class="temperature__wrapper">
-        <button class="temperature__button button">°C</button>
-        <button class="temperature__button button button_nonactive">°F</button>
+      <form action="#" method="POST" class="type-temperature__wrapper">
+        <button class="type-temperature__button button">°C</button>
+        <button class="type-temperature__button button button_nonactive">°F</button>
       </form>
     </div>
     <div class="search">
