feat: updated styles for buttons

--- a/fancy-weather/src/index.html
+++ b/fancy-weather/src/index.html
@@ -18,8 +18,8 @@
         </select>
       </form>
       <form action="#" method="POST" class="type-temperature__wrapper">
-        <button class="type-temperature__button button">°C</button>
-        <button class="type-temperature__button button button_nonactive">°F</button>
+        <button class="type-temperature__button button button_active">°C</button>
+        <button class="type-temperature__button button">°F</button>
       </form>
     </div>
     <div class="search">
