feat: updated tags on html file

--- a/fancy-weather/src/index.html
+++ b/fancy-weather/src/index.html
@@ -32,6 +32,10 @@
   <main class="main layout-2-columns">
     <div class="weather">
       <div class="weather__location">Minsk, Belarus</div>
+      <div class="weather__date">
+        <span class="date">Mon 28 October</span>
+        <span class="time">17:23</span>
+      </div>
       <div class="weather__temperature layout-2-columns">
         <div class="temperature">10°</div>
         <div class="temperature__additional">
