--- a/fancy-weather/src/index.html
+++ b/fancy-weather/src/index.html
@@ -37,7 +37,10 @@
         <span class="time">17:23</span>
       </div>
       <div class="weather__temperature layout-2-columns">
-        <div class="temperature">10°</div>
+        <div class="temperature">
+          <div class="weather__icon weather__icon_rain"></div>
+          10°
+        </div>
         <div class="temperature__additional">
           <div class="temperature__icon"></div>
           <div class="temperature__feels">Feels like 7°</div>
