refacotor: weather for 3 days dublicated

--- a/fancy-weather/src/index.html
+++ b/fancy-weather/src/index.html
@@ -52,7 +52,17 @@
         <div class="day__wrapper">
           <div class="day__name">Tuesday</div>
           <div class="day__temperature">7°C</div>
-          <div class="day__icon"></div>
+          <div class="day__icon day__icon_rain"></div>
+        </div>
+        <div class="day__wrapper">
+          <div class="day__name">Tuesday</div>
+          <div class="day__temperature">7°C</div>
+          <div class="day__icon day__icon_rain"></div>
+        </div>
+        <div class="day__wrapper">
+          <div class="day__name">Tuesday</div>
+          <div class="day__temperature">7°C</div>
+          <div class="day__icon day__icon_rain"></div>
         </div>
       </div>
     </div>
