feat: changed content on html file

--- a/fancy-weather/src/index.html
+++ b/fancy-weather/src/index.html
@@ -39,7 +39,7 @@
       <div class="weather__temperature layout-2-columns">
         <div class="temperature">
           <div class="weather__icon weather__icon_rain"></div>
-          10°
+          <span>10°</span>
         </div>
         <div class="temperature__additional">
           <div class="temperature__icon"></div>
@@ -67,8 +67,13 @@
       </div>
     </div>
     <div class="map__wrapper">
-      <div class="map"></div>
-      <div class="map__coordinates"></div>
+      <div class="map">
+        <img src="D:\developer\Frontend\Start\EPAM\map.jpg" alt="">
+      </div>
+      <div class="map__coordinates">
+        <p>Latitude: 56°52'</p>
+        <p>Longitude: 53°13'</p>
+      </div>
     </div>
   </main>
 </body>
