feat: added switch for temperature type

--- a/fancy-weather/src/index.html
+++ b/fancy-weather/src/index.html
@@ -18,8 +18,8 @@
         </select>
       </form>
       <form action="#" method="POST" class="type-temperature__wrapper">
-        <button class="type-temperature__button button button_active">°C</button>
-        <button class="type-temperature__button button">°F</button>
+        <button class="type-temperature__button type-temperature__button_c button button_active">°C</button>
+        <button class="type-temperature__button type-temperature__button_f button">°F</button>
       </form>
     </div>
     <div class="search">
