--- a/fancy-weather/src/index.html
+++ b/fancy-weather/src/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Weather</title>
+  <link href="https://api.mapbox.com/mapbox-gl-js/v1.10.1/mapbox-gl.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -68,7 +69,7 @@
     </div>
     <div class="map__wrapper">
       <div class="map">
-        <img src="D:\developer\Frontend\Start\EPAM\map.jpg" alt="">
+        <div id="map"></div>
       </div>
       <div class="map__coordinates">
         <p>Latitude: 56°52'</p>
@@ -76,5 +77,6 @@
       </div>
     </div>
   </main>
+  <script src="https://api.mapbox.com/mapbox-gl-js/v1.10.1/mapbox-gl.js"></script>
 </body>
 </html>
