feat: added random generation of pictures and pictures generate when button clicked

--- a/fancy-weather/src/index.html
+++ b/fancy-weather/src/index.html
@@ -43,7 +43,7 @@
           <span>10°</span>
         </div>
         <div class="temperature__additional">
-          <div class="temperature__icon"></div>
+          <div class="temperature__weather"></div>
           <div class="temperature__feels">Feels like 7°</div>
           <div class="temperature__wind">Wind: 2 m/s</div>
           <div class="temperature__humidity">Humidity: 83%</div>
